[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-blockchain-oracle"
version = "0.1.0"
description = "A Solana blockchain oracle MCP server for Hermes Agent - query wallets, track whales, analyze tokens, and explore on-chain data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "gizdusum" },
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "base58>=2.1.0",
]

keywords = ["solana", "blockchain", "mcp", "hermes", "nous-research", "oracle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-blockchain-oracle"
Repository = "https://github.com/NousResearch/hermes-blockchain-oracle"
Issues = "https://github.com/NousResearch/hermes-blockchain-oracle/issues"

[project.scripts]
hermes-blockchain-oracle = "hermes_blockchain_oracle.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_blockchain_oracle"]
